Fixed name typo and added blank functional test.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "task",
     "notes"
   ],
-  "author": "Christopher Bebry, Casmira Boland",
+  "author": "Christopher Bebry, Casmira Barbaro",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/spectrumbranch/faire/issues"
