--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "scurvy": "~0.2.1",
     "sequelize": "~2.0.0-beta.0",
     "hapi": "~1.14.0",
-    "mysql": "~2.0.0-alpha9"
+    "mysql": "~2.0.0-alpha9",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "mocha": "~1.13.0"
