--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sequelize": "~2.0.0-beta.0",
     "hapi": "~1.14.0",
     "mysql": "~2.0.0-alpha9",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "nodemailer": "~0.5.5"
   },
   "devDependencies": {
     "mocha": "~1.13.0"
