--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "hapi": "~1.16.0",
     "mysql": "~2.0.0-alpha9",
     "async": "~0.2.9",
-    "nodemailer": "~0.5.5"
+    "nodemailer": "~0.5.5",
+    "joi": "~2.0.3",
+    "handlebars": "~1.1.2"
   },
   "devDependencies": {
     "mocha": "~1.13.0"
