--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "task",
     "notes"
   ],
-  "author": "Christopher Bebry, Casmira Barbaro",
+  "author": "Christopher Bebry, original design by Casmira Barbaro",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/spectrumbranch/faire/issues"
