--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "scurvy": "~0.3.0",
-    "sequelize": "~2.0.0-beta.0",
+    "sequelize": "^1.7.10",
     "hapi": "~1.16.0",
     "mysql": "~2.0.0-alpha9",
     "async": "~0.2.9",
