--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "dependencies": {
     "scurvy": "~0.3.0",
     "sequelize": "^1.7.10",
-    "hapi": "~1.16.0",
+    "hapi": "^6.11.0",
     "mysql": "~2.0.0-alpha9",
     "async": "~0.2.9",
     "nodemailer": "~0.5.5",
-    "joi": "~2.0.3",
-    "handlebars": "~1.1.2"
+    "handlebars": "~1.1.2",
+    "hapi-auth-cookie": "^1.3.2",
+    "joi": "^4.7.0"
   },
   "devDependencies": {
     "mocha": "~1.13.0"
