--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,18 @@ language: node_js
 
 node_js:
   - 0.10
+  - 0.12
+  - 4
+
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 
 before_script:
   - export NODE_ENV=test_travis
