--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -22,17 +22,18 @@
     "url": "https://github.com/spectrumbranch/faire/issues"
   },
   "dependencies": {
-    "scurvy": "~0.3.0",
-    "sequelize": "^1.7.10",
-    "hapi": "^6.11.0",
-    "mysql": "~2.0.0-alpha9",
     "async": "~0.2.9",
-    "nodemailer": "~0.5.5",
     "handlebars": "~1.1.2",
+    "hapi": "^6.11.0",
     "hapi-auth-cookie": "^1.3.2",
-    "joi": "^4.7.0"
+    "joi": "^4.7.0",
+    "mysql": "^2.9.0",
+    "nodemailer": "~0.5.5",
+    "scurvy": "^0.4.0",
+    "sequelize": "^3.14.2"
   },
   "devDependencies": {
-    "mocha": "~1.13.0"
+    "mocha": "^2.3.4",
+    "should": "^7.1.1"
   }
 }
