--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "async": "~0.2.9",
+    "bluebird": "^3.0.6",
     "handlebars": "~1.1.2",
     "hapi": "^6.11.0",
     "hapi-auth-cookie": "^1.3.2",
