--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -28,10 +28,10 @@
     "hapi": "^6.11.0",
     "hapi-auth-cookie": "^1.3.2",
     "joi": "^4.7.0",
-    "mysql": "^2.9.0",
+    "mysql": "2.x.x",
     "nodemailer": "~0.5.5",
-    "scurvy": "^0.4.0",
-    "sequelize": "^3.14.2"
+    "scurvy": "1.x.x",
+    "sequelize": "^3.27.0"
   },
   "devDependencies": {
     "mocha": "^2.3.4",
