--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "async": "~0.2.9",
     "bluebird": "^3.0.6",
-    "handlebars": "~1.1.2",
+    "handlebars": "4.x.x",
     "hapi": "^6.11.0",
     "hapi-auth-cookie": "^1.3.2",
     "joi": "^4.7.0",
