--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "url": "https://github.com/spectrumbranch/faire/issues"
   },
   "dependencies": {
-    "async": "~0.2.9",
-    "bluebird": "^3.0.6",
+    "async": "2.x.x",
+    "bluebird": "3.x.x",
     "handlebars": "4.x.x",
     "hapi": "^6.11.0",
     "hapi-auth-cookie": "^1.3.2",
@@ -34,7 +34,7 @@
     "sequelize": "^3.27.0"
   },
   "devDependencies": {
-    "mocha": "^2.3.4",
-    "should": "^7.1.1"
+    "mocha": "3.x.x",
+    "should": "11.x.x"
   }
 }
