--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "hapi": "16.x.x",
     "hapi-auth-cookie": "6.x.x",
     "inert": "^4.1.0",
-    "joi": "^4.7.0",
+    "joi": "10.x.x",
     "mysql": "2.x.x",
     "nodemailer": "~0.5.5",
     "scurvy": "1.x.x",
