--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -25,8 +25,8 @@
     "async": "2.x.x",
     "bluebird": "3.x.x",
     "handlebars": "4.x.x",
-    "hapi": "16.x.x",
-    "hapi-auth-cookie": "6.x.x",
+    "hapi": "^16.1.1",
+    "hapi-auth-cookie": "^7.0.0",
     "inert": "^4.1.0",
     "joi": "10.x.x",
     "mysql": "2.x.x",
