--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,7 @@
     "inert": "^4.1.0",
     "joi": "10.x.x",
     "mysql": "2.x.x",
-    "nodemailer": "2.x.x",
+    "nodemailer": "^4.0.0",
     "scurvy": "1.x.x",
     "sequelize": "^3.27.0",
     "vision": "^4.1.1"
