--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faire",
-  "version": "1.3.2",
+  "version": "2.0.0",
   "description": "Text list management, useful for todo lists.",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   "dependencies": {
     "async": "2.x.x",
     "bluebird": "3.x.x",
+    "googleapis": "^20.1.0",
     "handlebars": "4.x.x",
     "hapi": "^16.1.1",
     "hapi-auth-cookie": "^7.0.0",
