--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "async": "2.x.x",
     "bluebird": "3.x.x",
-    "googleapis": "^20.1.0",
+    "googleapis": "22.x.x",
     "handlebars": "4.x.x",
     "hapi": "^16.1.1",
     "hapi-auth-cookie": "^7.0.0",
